Revision history for Perl extension Spooky::Patterns::XS

1.31    2017-04-01
        - Avoid crash on $SKIP20

1.30    2017-03-15
        - Optimized algorithm for lookup of patterns

1.21    2017-03-15
        - make sure hex is always 32 bytes long

1.20    2017-03-15
        - add Hash package for completness

1.12    2017-03-14
        - upgrade read lines to utf-8

1.11    2017-03-12
        - Fix successive matches

1.10    2017-03-11
        - Only support $SKIP variables

1.06    2017-03-10
        - Handle escape sequences correctly

1.05    2017-03-10
        - Ignore globs at the start of a pattern

1.04    2017-03-10
        - Proper expansion of globs

1.03    2017-03-10
        - Do not crash on binary files

1.02    2017-03-08
        - Some optimizations

1.01    2017-03-08
        - More deterministic return - looking at the pattern ID

1.00    2017-03-06
        - Initial release.