@@ -2,6 +2,7 @@ Revision history for Perl extension Spooky::Patterns::XS
 
 1.31    2017-04-01
         - Avoid crash on $SKIP20
+        - Do not require the full file token in memory
 
 1.30    2017-03-15
         - Optimized algorithm for lookup of patterns
